[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/graphics/map_pin.svg" type="Texture2D" id=1]
[ext_resource path="res://systems/map_system/ui_elements/map_pin/map_pin.gd" type="Script" id=2]
[ext_resource path="res://assets/graphics/map/new Symbol/icon/Polygon 6.png" type="Texture2D" id=3]
[ext_resource path="res://systems/map_system/ui_elements/map_pin/MapPinStateMachine.gd" type="Script" id=4]
[ext_resource path="res://assets/graphics/map/progress/progress bar.png" type="Texture2D" id=6]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=17]
resource_local_to_scene = true
radius = 48.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_local_to_scene = true
resource_name = "mouse_hover"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.25 ),
"transitions": PackedFloat32Array( -2, -2 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.15, 0.25 ),
"transitions": PackedFloat32Array( 0.5, 0.5, -2 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_local_to_scene = true
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "dragged"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.470588 ) ]
}

[sub_resource type="Animation" id=11]
resource_local_to_scene = true
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureProgressBar:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureProgressBar:value")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureProgressBar:visible")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "progress_bar"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureProgressBar:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.3, 1 ),
"transitions": PackedFloat32Array( -2, -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( -2, -2 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureProgressBar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=20]
resource_name = "selection"

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MapPin" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="MapPinStateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 17 )

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -28.0
offset_top = -27.0
offset_right = 28.0
offset_bottom = 29.0
mouse_filter = 2
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 4
tint_under = Color( 0.203922, 0.203922, 0.203922, 0.45098 )
tint_progress = Color( 0.0941176, 0.576471, 1, 0.847059 )
nine_patch_stretch = true

[node name="AnimationTree" type="Node" parent="."]

[node name="HoverAnimation" type="AnimationPlayer" parent="AnimationTree"]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/mouse_hover = SubResource( 3 )

[node name="DragAnimation" type="AnimationPlayer" parent="AnimationTree"]
root_node = NodePath("../..")
anims/RESET = SubResource( 13 )
anims/dragged = SubResource( 16 )

[node name="ProgressBarProgress" type="AnimationPlayer" parent="AnimationTree"]
root_node = NodePath("../..")
anims/RESET = SubResource( 11 )
anims/progress_bar = SubResource( 12 )

[node name="SelectionAnimation" type="AnimationPlayer" parent="AnimationTree"]
anims/selection = SubResource( 20 )

[node name="Control" type="Control" parent="."]
offset_top = 48.0
offset_bottom = 48.0
scale = Vector2( 1e-05, 1e-05 )

[node name="ColorRect" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = 14.0
offset_right = 69.0
offset_bottom = 44.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Control/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="Control"]
offset_left = -10.0
offset_right = 11.0
offset_bottom = 15.0
texture = ExtResource( 3 )
expand = true

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Area2D" to="MapPinStateMachine" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_entered" from="Area2D" to="MapPinStateMachine" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_exited" from="Area2D" to="MapPinStateMachine" method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer" to="MapPinStateMachine" method="_on_Timer_timeout"]
